chapter07_cilium/manifest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-by-cilium
  namespace: handson
  annotations:
    ingress.cilium.io/loadbalancer-mode: shared
spec:
  ingressClassName: cilium
  rules:
  - host: app.cilium.vm62.handson.cloudnativedays.jp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: handson
            port:
              number: 8080
